<resources>
    <string name="app_name">Projet_Final_Pendu</string>

    // Main Activity
    <string name="titre">Jeu du Pendu</string>
    <string name="txtUtilisateurLogin">Utilisateur</string>
    <string name="txtMotPasseLogin">Mot de passe</string>
    <string name="btnEntrerLogin">Entrer</string>
    <string name="btnJouerLogin">Jouer</string>
    <string name="btnEnregistrerUtilisateurLogin">Enregistrer</string>
    <string name="ToastUtilisateurNeExistePas">Utilisateur n\'existe pas</string>



    // Activity Menu Jeu
    <string name="txtBienvenue">Bienvenue au jeu du pendu! Choisissez un theme et votre niveau de difficulte. Bonne chance!</string>
    <string name="radioBtnFacile">Facile</string>
    <string name="radioBtnMoyen">Moyen</string>
    <string name="radioBtnDifficile">Difficile</string>
    <string name="btnJouer">Jouer</string>

    // Activity Jeu
    <string name="txtDescription">Description du Mot</string>
    <string name="txtChronometre">Chronometre</string>
    <string name="txtMauvaisMot">Mauvais Mot</string>
    <string name="txtSaissirLettre">Saissir une lettre</string>
    <string name="btnEssayer">Essayer</string>
    <string name="btnRejouer">Rejouer</string>

    <string name="theme_animaux">Animaux</string>
    <string name="theme_pays">Pays</string>
    <string name="theme_musique">Musique</string>
    <string name="theme_voitures">Voitures</string>

    <string name="niveau_facile">Facile</string>
    <string name="niveau_moyen">Moyen</string>
    <string name="niveau_difficile">Difficile</string>

    <string name="utilisateur_non_trouve">Utilisateur non trouvé</string>
    <string name="deja_utilise_lettre">Vous avez déjà utilisé cette lettre !</string>
    <string name="bravo_gagne">Bravo, vous avez gagné !</string>
    <string name="bravo_vous_gagne">Bravo, vous avez gagné !</string>
    <string name="vous_perdu">Vous avez perdu ! Le mot était</string>


    // Activity Panneau Jeu
    <string name="aucun_mot_par_Theme_choisi">Aucun mot trouvé pour le thème et le niveau de difficulté choisis.</string>
    <string name="selectionar_tehem_et_niveau">Veuillez sélectionner un thème et un niveau de difficulté.</string>

    // Activity Admin
    <string name="txtMot">Bienvenue dans la section administrateur</string>
    <string name="btnAjouterMot">Ajouter Mot</string>
    <string name="btnAfficherMot">Consulter Mot</string>
    <string name="btnSupprimerMot">Supprimer Mot</string>
    <string name="btnConsulterUtilisateur">Consulter Utilisateur</string>
    <string name="btnSupprimerUtilisateur">Supprimer Utilisateur</string>
    <string name="btnAjouterUtilisateur">Ajouter Utilisateur</string>

    <string name="btnSortir">Sortir</string>

    // Activity Ajouter Mot
    <string name="txtAjouterMot">Ajouter un mot</string>
    <string name="txtDescriptionMot"> Description du Mot</string>
    <string name="txtThemeMot">Choisir un theme du Mot</string>

    <string name="radioBtnAnimaux">Animaux</string>
    <string name="radioBtnPays">Pays</string>
    <string name="radioBtnMusique">Instrument de Musique</string>
    <string name="radioBtnVoiture">Marque de Voiture</string>

    <string name="txtNiveauMot">Choisir un niveau de difficulte</string>
    <string name="btnFacile">Facile</string>
    <string name="btnMoyen">Moyen</string>
    <string name="btnDifficile">Difficile</string>

    <string name="btnEnregistrerMot">Ajouter</string>

    <string name="ToastMotAjour">Mot ajouter avec succes</string>
    <string name="ToastRempMot">Remplir tous les champs</string>



    // Activity Consulter Mot
    <string name="btnChercherParMot">Chercher par mot</string>
    <string name="btnChercherParTheme">Chercher par theme</string>
    <string name="btnChercherParId">Chercher par id</string>
    <string name="btnChercherParNiveau">Chercher par niveau</string>

    <string name="txtChercherParMot">Chercher par mot</string>
    <string name="txtChercherParTheme">Chercher par theme</string>
    <string name="txtChercherParId">Chercher par id</string>
    <string name="txtChercherParNiveau">Chercher par niveau</string>

    // Activity Supprimer Mot
    <string name="txtSupprimerMot">Supprimer un mot</string>
    <string name="txtSupprimerMotId">Id du mot a supprimer</string>

    // Activity Consulter Utilisateur
    <string name="btnChercherAdmParUtilisateur">Chercher par utilisateur</string>
    <string name="btnChercherAdmParId">Chercher par utilisateur Id</string>

    // Activity Enregistrer Utilisateur
    <string name="btnEnregistrerUtilisateur">Enregistrer un utilisateur</string>
    <string name="editUtilisateurUser">Nom d\'utilisateur</string>
    <string name="editUtilisateurMotPasse">Mot de passe</string>

    // Activity Supprimer
    <string name="btnSupprimerMotId">Supprimer un mot par ID</string>
    <string name="btnSupprimerToutMot">Supprimer tous les mots</string>

    // Activity Supprimer Utilisateur
    <string name="btnSupprimerAdmUtilisateur">Supprimer un utilisateur par ID</string>
    <string name="btnSupprimerAdmTouteUtilisateur">Supprimer tous les utilisateurs</string>
    <string name="msg_utilisateur_supprime">Utilisateur supprimé</string>
    <string name="msg_utilisateur_non_trouve">Utilisateur non trouvé</string>

    // Activity Enregistrer UtilisateurAdmin

    <string name="btnEnregistrerAdmUtilisateur">Enregistrer un utilisateur</string>




</resources>