<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtNiveauDifficulte"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/txtNiveauMot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/edtDescriptionMot"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/txtDescriptionMot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMot" />

    <EditText
        android:id="@+id/edtMot"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/txtAjouterMot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescriptionMot">

        <RadioButton
            android:id="@+id/radioBtnAnimaux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioBtnAnimaux" />

        <RadioButton
            android:id="@+id/radioBtnPays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioBtnPays" />

        <RadioButton
            android:id="@+id/radioBtnMusique"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioBtnMusique" />

        <RadioButton
            android:id="@+id/radioBtnVoitures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioBtnVoiture" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioBtnFacile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioBtnFacile" />

            <RadioButton
                android:id="@+id/radioBtnMoyen"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:text="@string/radioBtnMoyen" />

            <RadioButton
                android:id="@+id/radioBtnDifficile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioBtnDifficile" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btnEnregistrer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/btnEnregistrerMot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="651dp" />

    <TextView
        android:id="@+id/txtTheme"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/txtThemeMot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescriptionMot" />
</androidx.constraintlayout.widget.ConstraintLayout>